--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=1000; user-scalable=0;" />
+    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="style.css">
     <title>Adhiraj Chakrabarti</title>
 </head>
