--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
         </div>
         <a href="contact.html"><button class="lets-talk">Let's talk</button></a>
     </nav>
+    <img src="images/settings.png" alt="" srcset="" id="hambarger" onclick="menu()">
+
+
+    <div id="hambargarmenu">
+      <img src="images/close.png" alt="" srcset="" id="close-menu" onclick="closemenu()">
+      <a href="#heading0" style="text-decoration: none"><p  id="home" onclick="closemenu()">Home</p></a>
+      <a href="#heading2" style="text-decoration: none"><p  id="about" onclick="closemenu()">About</p></a>
+      <a href="#heading4" style="text-decoration: none"><p  id="work" onclick="closemenu()">Works</p></a>
+      <a href="#heading4" style="text-decoration: none"><p  id="contact" onclick="closemenu()">Contact</p></a>
+    
+    </div>
     <div class="first-row">
         <div class="profile">
             <img src="images/profile-picture.jpg" alt="" srcset="" id="profile-picture">
