--- a/profile.html
+++ b/profile.html
@@ -28,6 +28,16 @@
         </div>
         <button class="lets-talk">Let's talk</button>
     </nav>
+    <img src="images/settings.png" alt="" srcset="" id="hambarger" onclick="menu()">
+
+
+    <div id="hambargarmenu">
+      <img src="images/close.png" alt="" srcset="" id="close-menu" onclick="closemenu()">
+      <a href="#heading0" style="text-decoration: none"><p  id="home" onclick="closemenu()">Home</p></a>
+      <a href="#heading2" style="text-decoration: none"><p  id="about" onclick="closemenu()">About</p></a>
+      <a href="#heading4" style="text-decoration: none"><p  id="work" onclick="closemenu()">Works</p></a>
+      <a href="#heading4" style="text-decoration: none"><p  id="contact" onclick="closemenu()">Contact</p></a>
+    </div>
     <div class="first-row-profile">
         <div class="profile-photo">
             <img src="images/profile-picture.jpg" id="profile-photo">
@@ -79,9 +89,13 @@
         </div>
 
     </div>
-    <footer style="padding-bottom: 20px;">
-        <p id="footer">© All rights reserved by Adhiraj Chakrabarti</p>
+    <footer style="padding-bottom: 20px; width: 1130px;">
+       
     </footer>
+
+    <script src="main.js"></script>
 </body>
+
+
 
 </html>
