--- a/profile.html
+++ b/profile.html
@@ -89,7 +89,7 @@
         </div>
 
     </div>
-    <footer style="padding-bottom: 20px; width: 1150px;">
+    <footer style="padding-bottom: 20px;">
        
     </footer>
 
