--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </nav>
     <img src="images/settings.png" alt="" srcset="" id="hambarger" onclick="menu()">
 
-
+   <div id="hambargarmenu">
    <img src="images/close.png" alt="" srcset="" id="close-menu" onclick="closemenu()">
       <a href="index.html" style="text-decoration: none"><p  id="home" onclick="closemenu()">Home</p></a>
       <a href="credentials.html" style="text-decoration: none"><p  id="about" onclick="closemenu()">About</p></a>
