--- a/project.html
+++ b/project.html
@@ -31,12 +31,12 @@
     <img src="images/settings.png" alt="" srcset="" id="hambarger" onclick="menu()">
 
 
-    <div id="hambargarmenu">
+   <div id="hambargarmenu">
       <img src="images/close.png" alt="" srcset="" id="close-menu" onclick="closemenu()">
-      <a href="#heading0" style="text-decoration: none"><p  id="home" onclick="closemenu()">Home</p></a>
-      <a href="#heading2" style="text-decoration: none"><p  id="about" onclick="closemenu()">About</p></a>
-      <a href="#heading4" style="text-decoration: none"><p  id="work" onclick="closemenu()">Works</p></a>
-      <a href="#heading4" style="text-decoration: none"><p  id="contact" onclick="closemenu()">Contact</p></a>
+      <a href="index.html" style="text-decoration: none"><p  id="home" onclick="closemenu()">Home</p></a>
+      <a href="credentials.html" style="text-decoration: none"><p  id="about" onclick="closemenu()">About</p></a>
+      <a href="project.html" style="text-decoration: none"><p  id="work" onclick="closemenu()">Works</p></a>
+      <a href="contact.html" style="text-decoration: none"><p  id="contact" onclick="closemenu()">Contact</p></a>
     
     </div>
     <div style="display: flex;">
