--- a/credentials.html
+++ b/credentials.html
@@ -16,7 +16,7 @@
             <a href="index.html" style="text-decoration: none">
                 <p class="home">Home</p>
             </a>
-            <a href="profile.html" style="text-decoration: none;">
+            <a href="credentials.html" style="text-decoration: none;">
                 <p class="about">About</p>
             </a>
             <a href="project.html" style="text-decoration: none;">
@@ -28,6 +28,17 @@
         </div>
         <a href="contact.html"><button class="lets-talk">Let's talk</button></a>
     </nav>
+    <img src="images/settings.png" alt="" srcset="" id="hambarger" onclick="menu()">
+
+
+    <div id="hambargarmenu">
+      <img src="images/close.png" alt="" srcset="" id="close-menu" onclick="closemenu()">
+      <a href="index.html" style="text-decoration: none"><p  id="home" onclick="closemenu()">Home</p></a>
+      <a href="credentials.html" style="text-decoration: none"><p  id="about" onclick="closemenu()">About</p></a>
+      <a href="project.html" style="text-decoration: none"><p  id="work" onclick="closemenu()">Works</p></a>
+      <a href="contact.html" style="text-decoration: none"><p  id="contact" onclick="closemenu()">Contact</p></a>
+    
+    </div>
     <div class="first-row-credentials">
         <div class="left-credential">
             <div class="profile-box-credential">
@@ -125,9 +136,15 @@
 
         </div>
     </div>
+    <div class="extra"></div>
     <footer>
         <p id="footer">© All rights reserved by Adhiraj Chakrabarti</p>
     </footer>
+
+
+    <script src="main.js"></script>
 </body>
+
+
 
 </html>
