--- a/profile.html
+++ b/profile.html
@@ -46,7 +46,7 @@
         <p id="self-summary">SELF-SUMMARY</p>
         <div class="summary">
             <img src="images/icon2.png" id="icon2">
-            <p id="full-name-profile"> Adhiraj Charkrabarti</p>
+            <p id="full-name-profile"> Adhiraj Chakrabarti</p>
             <p id="name-description-profile">I'm all about creating content that sparks imagination and inspires action.
                 From engaging videos to thought-provoking blogs, I'm here to blend creativity with authenticity and take
                 you on a journey of exploration and inspiration. Let's discover the power of storytelling together!</p>
