--- a/profile.html
+++ b/profile.html
@@ -13,16 +13,16 @@
     <nav class="nav-bar">
         <img src="images/logo.png" alt="" srcset="" class="logo">
         <div class="links">
-            <a href="#" style="text-decoration: none">
+            <a href="index.html" style="text-decoration: none">
                 <p class="home">Home</p>
             </a>
-            <a href="#" style="text-decoration: none;">
+            <a href="credentials.html" style="text-decoration: none;">
                 <p class="about">About</p>
             </a>
             <a href="project.html" style="text-decoration: none;">
                 <p class="works">Works</p>
             </a>
-            <a href="#" style="text-decoration: none;">
+            <a href="contact.html" style="text-decoration: none;">
                 <p class="contact">Contact</p>
             </a>
         </div>
@@ -33,11 +33,10 @@
 
     <div id="hambargarmenu">
       <img src="images/close.png" alt="" srcset="" id="close-menu" onclick="closemenu()">
-      <a href="index.html" style="text-decoration: none"><p  id="home" onclick="closemenu()">Home</p></a>
-      <a href="credentials.html" style="text-decoration: none"><p  id="about" onclick="closemenu()">About</p></a>
-      <a href="project.html" style="text-decoration: none"><p  id="work" onclick="closemenu()">Works</p></a>
-      <a href="contact.html" style="text-decoration: none"><p  id="contact" onclick="closemenu()">Contact</p></a>
-    
+      <a href="#heading0" style="text-decoration: none"><p  id="home" onclick="closemenu()">Home</p></a>
+      <a href="#heading2" style="text-decoration: none"><p  id="about" onclick="closemenu()">About</p></a>
+      <a href="#heading4" style="text-decoration: none"><p  id="work" onclick="closemenu()">Works</p></a>
+      <a href="#heading4" style="text-decoration: none"><p  id="contact" onclick="closemenu()">Contact</p></a>
     </div>
     <div class="first-row-profile">
         <div class="profile-photo">
