--- a/profile.html
+++ b/profile.html
@@ -28,7 +28,7 @@
         </div>
         <button class="lets-talk">Let's talk</button>
     </nav>
-    <img src="images/settings.png" alt="" srcset="" id="hambarger" onclick="menu()">
+    <img src="images/settings.png" alt="" srcset="" id="hambarger1" onclick="menu()">
 
 
     <div id="hambargarmenu">
