--- a/services.html
+++ b/services.html
@@ -83,16 +83,16 @@
         <a href="contact.html"><img src="images/icon.svg" alt="" srcset="" id="detail-icon4-service-page"></a>
         
     </div>
-    <div class="social-profiles-services">
-        <div class="profile-box-services">
-            <div class="social-icons-services">
+    <div class="social-profiles-services-service-page">
+        <div class="profile-box-services-service-page">
+            <div class="social-icons-services-service-page">
                 <div class="social"> <img src="images/Instagram.png" id="instagram-icon"></div>
                 <div class="social"> <img src="images/linkedin.png" id="linkedin-icon"></div>
             </div>
 
         </div>
-        <p id="details">STAY WITH ME</p>
-        <p id="title">Profiles</p>
+        <p id="details-service-page">STAY WITH ME</p>
+        <p id="title-service-page">Profiles</p>
         <a href="contact.html"><img src="images/icon.svg" alt="" srcset="" id="detail-icon2-service-page"></a>
     </div>
     <div class="extra2"></div>
