--- a/services.html
+++ b/services.html
@@ -86,8 +86,8 @@
     <div class="social-profiles-services-service-page">
         <div class="profile-box-services-service-page">
             <div class="social-icons-services-service-page">
-                <div class="social"> <img src="images/Instagram.png" id="instagram-icon"></div>
-                <div class="social"> <img src="images/linkedin.png" id="linkedin-icon"></div>
+                <div class="social-service-page"> <img src="images/Instagram.png" id="instagram-icon"></div>
+                <div class="social-service-page"> <img src="images/linkedin.png" id="linkedin-icon"></div>
             </div>
 
         </div>
