--- a/contact.html
+++ b/contact.html
@@ -16,19 +16,29 @@
             <a href="index.html" style="text-decoration: none">
                 <p class="home">Home</p>
             </a>
-            <a href="profile.html" style="text-decoration: none;">
+            <a href="credentials.html" style="text-decoration: none;">
                 <p class="about">About</p>
             </a>
             <a href="project.html" style="text-decoration: none;">
                 <p class="works">Works</p>
             </a>
-            <a href="#" style="text-decoration: none;">
+            <a href="contact.html" style="text-decoration: none;">
                 <p class="contact">Contact</p>
             </a>
         </div>
-        <button class="lets-talk">Let's talk</button>
+        <a href="contact.html"><button class="lets-talk">Let's talk</button></a>
     </nav>
+    <img src="images/settings.png" alt="" srcset="" id="hambarger" onclick="menu()">
 
+
+    <div id="hambargarmenu">
+      <img src="images/close.png" alt="" srcset="" id="close-menu" onclick="closemenu()">
+      <a href="index.html" style="text-decoration: none"><p  id="home" onclick="closemenu()">Home</p></a>
+      <a href="credentials.html" style="text-decoration: none"><p  id="about" onclick="closemenu()">About</p></a>
+      <a href="project.html" style="text-decoration: none"><p  id="work" onclick="closemenu()">Works</p></a>
+      <a href="contact.html" style="text-decoration: none"><p  id="contact" onclick="closemenu()">Contact</p></a>
+    
+    </div>
     <div class="first-row-contact">
         <div class="contact-informations">
             <p id="contact-info-title">CONTACT INFO</p>
@@ -70,7 +80,7 @@
 
         <div class="contact-form">
             <img src="images/icon2.png"
-            id="icon4">
+            id="icon4-contact-page">
             <p id="lets-work-contact">Let's work <b style="color: #5975F0;;">together.</b></p> </p>
             <input type="text" placeholder="Name" id="input-text">
             <input type="email" placeholder="Email" id="input-text">
@@ -82,6 +92,7 @@
     <footer >
         <p id="footer">© All rights reserved by Adhiraj Chakrabarti</p>
     </footer>
+    <script src="main.js"></script>
 </body>
 
 </html>
