--- a/contact.html
+++ b/contact.html
@@ -32,13 +32,14 @@
 
 
     <div id="hambargarmenu">
-      <img src="images/close.png" alt="" srcset="" id="close-menu" onclick="closemenu()">
-      <a href="index.html" style="text-decoration: none"><p  id="home" onclick="closemenu()">Home</p></a>
-      <a href="credentials.html" style="text-decoration: none"><p  id="about" onclick="closemenu()">About</p></a>
-      <a href="project.html" style="text-decoration: none"><p  id="work" onclick="closemenu()">Works</p></a>
-      <a href="contact.html" style="text-decoration: none"><p  id="contact" onclick="closemenu()">Contact</p></a>
-    
-    </div>
+        <img src="images/close.png" alt="" srcset="" id="close-menu" onclick="closemenu()">
+        <img src="images/logo.png" alt="" srcset="" class="logo">
+        <a href="index.html" style="text-decoration: none"><p  id="home" onclick="closemenu()">Home</p></a>
+        <a href="credentials.html" style="text-decoration: none"><p  id="about" onclick="closemenu()">About</p></a>
+        <a href="project.html" style="text-decoration: none"><p  id="work" onclick="closemenu()">Works</p></a>
+        <a href="contact.html" style="text-decoration: none"><p  id="contact" onclick="closemenu()">Contact</p></a>
+        <a href="contact.html"><button class="lets-talk">Let's talk</button></a>
+      </div>
     <div class="first-row-contact">
         <div class="contact-informations">
             <p id="contact-info-title">CONTACT INFO</p>
@@ -71,9 +72,9 @@
             </div>
             <p id="social-info-title">SOCIAL INFO</p>
             <div class="social-info-contact">
-                <div class="icons"><img src="images/linkedin.png" id="linkedin-icons"></div>
-                <div class="icons"><img src="images/Instagram.png" id="instagram-icons"></div>
-                <div class="icons"><img src="images/facebook-icon.png" id="facebook-icons"></div>
+                <a href="https://www.linkedin.com/in/adhiraj-chakrabarti-0934172a3/"><div class="icons"><img src="images/linkedin.png" id="linkedin-icons"></div></a>
+                <a href="https://www.instagram.com/theway_isaw/"><div class="icons"><img src="images/Instagram.png" id="instagram-icons"></div></a>
+                <a href="https://www.facebook.com/profile.php?id=100083058308713"><div class="icons"><img src="images/facebook-icon.png" id="facebook-icons"></div></a>
             </div>
         </div>
 
