--- a/credentials.html
+++ b/credentials.html
@@ -32,13 +32,14 @@
 
 
     <div id="hambargarmenu">
-      <img src="images/close.png" alt="" srcset="" id="close-menu" onclick="closemenu()">
-      <a href="index.html" style="text-decoration: none"><p  id="home" onclick="closemenu()">Home</p></a>
-      <a href="credentials.html" style="text-decoration: none"><p  id="about" onclick="closemenu()">About</p></a>
-      <a href="project.html" style="text-decoration: none"><p  id="work" onclick="closemenu()">Works</p></a>
-      <a href="contact.html" style="text-decoration: none"><p  id="contact" onclick="closemenu()">Contact</p></a>
-    
-    </div>
+        <img src="images/close.png" alt="" srcset="" id="close-menu" onclick="closemenu()">
+        <img src="images/logo.png" alt="" srcset="" class="logo">
+        <a href="index.html" style="text-decoration: none"><p  id="home" onclick="closemenu()">Home</p></a>
+        <a href="credentials.html" style="text-decoration: none"><p  id="about" onclick="closemenu()">About</p></a>
+        <a href="project.html" style="text-decoration: none"><p  id="work" onclick="closemenu()">Works</p></a>
+        <a href="contact.html" style="text-decoration: none"><p  id="contact" onclick="closemenu()">Contact</p></a>
+        <a href="contact.html"><button class="lets-talk">Let's talk</button></a>
+      </div>
     <div class="first-row-credentials">
         <div class="left-credential">
             <div class="profile-box-credential">
@@ -47,13 +48,13 @@
                 <p id="email-credentials">itsadhiraj111@gmail.com</p>
                 <div class="social-icons-credentials">
                     <div class="social-icons-box-credentials">
-                        <img src="images/Instagram.png" id="instagram-icon-credentials">
+                       <a href="https://www.instagram.com/theway_isaw/"> <img src="images/Instagram.png" id="instagram-icon-credentials">
+                    </div></a>
+                    <div class="social-icons-box-credentials">
+                    <a href="https://www.linkedin.com/in/adhiraj-chakrabarti-0934172a3/"><img src="images/linkedin.png" id="linkedin-icon-credentials"></a>
                     </div>
                     <div class="social-icons-box-credentials">
-                        <img src="images/linkedin.png" id="linkedin-icon-credentials">
-                    </div>
-                    <div class="social-icons-box-credentials">
-                        <img src="images/facebook-icon.png" id="facebook-icon-credentials">
+                     <a href="https://www.facebook.com/profile.php?id=100083058308713"><img src="images/facebook-icon.png" id="facebook-icon-credentials"></a>
                     </div>
                     <div class="social-icons-box-credentials">
                         <img src="images/website-icon.png" id="website-icon-credentials">
