--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@
 
     <div id="hambargarmenu">
       <img src="images/close.png" alt="" srcset="" id="close-menu" onclick="closemenu()">
+      <img src="images/logo.png" alt="" srcset="" class="logo">
       <a href="index.html" style="text-decoration: none"><p  id="home" onclick="closemenu()">Home</p></a>
       <a href="credentials.html" style="text-decoration: none"><p  id="about" onclick="closemenu()">About</p></a>
       <a href="project.html" style="text-decoration: none"><p  id="work" onclick="closemenu()">Works</p></a>
       <a href="contact.html" style="text-decoration: none"><p  id="contact" onclick="closemenu()">Contact</p></a>
-    
+      <a href="contact.html"><button class="lets-talk">Let's talk</button></a>
     </div>
     <div class="first-row">
         <div class="profile">
@@ -94,8 +95,8 @@
         <div class="social-profiles">
             <div class="profile-box">
                 <div class="social-icons">
-                    <div class="social"> <img src="images/Instagram.png" id="instagram-icon"></div>
-                    <div class="social"> <img src="images/linkedin.png" id="linkedin-icon"></div>
+                    <a href="https://www.instagram.com/theway_isaw/"><div class="social"> <img src="images/Instagram.png" id="instagram-icon"></div></a>
+                    <a href="https://www.linkedin.com/in/adhiraj-chakrabarti-0934172a3/"><div class="social"> <img src="images/linkedin.png" id="linkedin-icon"></div></a>
                 </div>
 
             </div>
