--- a/project.html
+++ b/project.html
@@ -30,15 +30,15 @@
     </nav>
     <img src="images/settings.png" alt="" srcset="" id="hambarger" onclick="menu()">
 
-
-   <div id="hambargarmenu">
-      <img src="images/close.png" alt="" srcset="" id="close-menu" onclick="closemenu()">
-      <a href="index.html" style="text-decoration: none"><p  id="home" onclick="closemenu()">Home</p></a>
-      <a href="credentials.html" style="text-decoration: none"><p  id="about" onclick="closemenu()">About</p></a>
-      <a href="project.html" style="text-decoration: none"><p  id="work" onclick="closemenu()">Works</p></a>
-      <a href="contact.html" style="text-decoration: none"><p  id="contact" onclick="closemenu()">Contact</p></a>
-    
-    </div>
+    <div id="hambargarmenu">
+        <img src="images/close.png" alt="" srcset="" id="close-menu" onclick="closemenu()">
+        <img src="images/logo.png" alt="" srcset="" class="logo">
+        <a href="index.html" style="text-decoration: none"><p  id="home" onclick="closemenu()">Home</p></a>
+        <a href="credentials.html" style="text-decoration: none"><p  id="about" onclick="closemenu()">About</p></a>
+        <a href="project.html" style="text-decoration: none"><p  id="work" onclick="closemenu()">Works</p></a>
+        <a href="contact.html" style="text-decoration: none"><p  id="contact" onclick="closemenu()">Contact</p></a>
+        <a href="contact.html"><button class="lets-talk">Let's talk</button></a>
+      </div>
     <div style="display: flex;">
         <p id="coming-soon">Coming&nbsp;Soon</p>
     <div class="container">
