--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <img src="images/profile-picture.jpg" alt="" srcset="" id="profile-picture">
             <p id="profession">CONTENT CREATOR</p>
             <p id="full-name">Adhiraj <br> Chakrabarti.</p>
-            <p id="job-title">I am a Content Creator <br>based in Kolata</p>
+            <p id="job-title">I am a Content Creator <br>based in Kolkata</p>
             <a href="profile.html"><img src="images/icon.svg" alt="" srcset="" id="detail-icon1"></a>
 
         </div>
