--- a/services.html
+++ b/services.html
@@ -56,17 +56,26 @@
             <div class="service-row-1">
                 <div class="services-details">
                    <P id="service-heading-1">CONTENT WRITING</P> 
-                   <P id="service-heading-description-1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus fuga cum quae temporibus atque autem excepturi reiciendis libero, sed exercitationem necessitatibus illo quibusdam ipsum similique? </P>
+                   <P id="service-heading-description-1">- Screenplay (film, short films, ad projects) <br> <br>
+                    - Storyboarding (additionals)
+       </P>
                 </div>
                 <div class="services-details">
                     <P id="service-heading-2">VOICE ARTISTRY</P> 
-                    <P id="service-heading-description-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus fuga cum quae temporibus atque autem excepturi reiciendis libero, sed exercitationem necessitatibus illo quibusdam ipsum similique? </P></div>
+                    <P id="service-heading-description-2">- Dubbing and Voice overs <br><br>
+                        - Anchoring and RJing <br><br>
+                        - Radio Drama
+            </P></div>
             </div>
             <div class="service-row-2">
                 <div class="services-details"><P id="service-heading-3">VIDEO EDITING & SOUND DESIGNING</P> 
-                    <P id="service-heading-description-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus fuga cum quae temporibus atque autem excepturi reiciendis libero, sed exercitationem necessitatibus illo quibusdam ipsum similique? </P></div>
+                    <P id="service-heading-description-3"> - Film Raw footage and others <br><br>
+                        - Sound Designing for Radio programmes and films
+           
+           </P></div>
                 <div class="services-details"><P id="service-heading-4">PHOTOGRAPHY</P> 
-                    <P id="service-heading-description-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus fuga cum quae temporibus atque autem excepturi reiciendis libero, sed exercitationem necessitatibus illo quibusdam ipsum similique? </P></div>
+                    <P id="service-heading-description-4">- Freelancing for newspapers and sites  <br><br>
+                        - Travellogues and magazines</P></div> 
             </div>
         </div>
     </div>
@@ -80,7 +89,7 @@
     <div class="connect-services">
         <img src="images/icon2.png"
         id="icon2-services-page">
-        <p id="lets-work-services">Let's <p id="lets-work-services">work <b style=" color: #5975F0;;">together.</b></p> </p>
+        <p id="lets-work-services">Let's <p id="lets-work-services">work <b style=" color: #5B78f6;;">together.</b></p> </p>
         <a href="contact.html"><img src="images/icon.svg" alt="" srcset="" id="detail-icon4-service-page"></a>
         
     </div>
