--- a/profile.html
+++ b/profile.html
@@ -86,7 +86,7 @@
         <div class="connect-profile">
             <img src="images/icon2.png"
             id="icon2">
-            <p id="lets-work-profile">Let's <p id="lets-work-profile">work <b style="color: #5975F0;;">together.</b></p> </p>
+            <p id="lets-work-profile">Let's <p id="lets-work-profile">work <b style="color: #5B78f6;;">together.</b></p> </p>
             <a href="contact.html"><img src="images/icon.svg" alt="" srcset="" id="detail-icon5"></a>
         </div>
 
