--- a/credentials.html
+++ b/credentials.html
@@ -66,72 +66,55 @@
         <div class="right-credential">
             <P id="about-me-credentials">ABOUT ME</P>
             <P id="about-me-description-credentials">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias nesciunt, blanditiis accusantium odio
-                sapiente ad placeat nam a consequuntur magnam cum eius quisquam incidunt saepe unde molestiae ut sit
-                nulla officia culpa id inventore hic facere est? Delectus rem maiores minus esse commodi odit quod
-                libero quos eligendi. Quam itaque accusamus omnis fuga atque dignissimos aliquid praesentium, magnam
-                debitis voluptas consequuntur corporis, iure voluptatum asperiores impedit.
-            <p id="about-me-description-credentials">Ducimus, magnam? Repudiandae labore provident consectetur cum nobis
-                totam ipsum culpa? Aliquam necessitatibus commodi distinctio perspiciatis ipsam, debitis eaque sequi
-                laboriosam assumenda natus quasi nemo, illo esse nesciunt cupiditate. Perspiciatis dolor voluptate
-                distinctio rem?</p>
+                Hello! I am a content creator, based in Kolkata, West Bengal. I am pursuing a BSc. Honours degree in Mass Communications & Videography at St. Xavier's College, Kolkata. I am a Screenplay writer, Voice Artist, and also do Sound Designing, Storyboarding and Video Editing professionally. 
+            <p id="about-me-description-credentials">Welcome to my official website! Here you can see my previous work samples, projects, and original works. You can get in touch with me through my contacts and social media handle, as provided here... Let's collab together, to create magic on screen !!</p>
             </P>
             <P id="experience-credentials">EXPERIENCE</P>
             <p id="experience-period-credentials">Feb 2023 - Present</p>
             <p id="experience-domain-credentials">Radio Jockey</p>
-            <p id="experience-company-credentials">0.8 mhz fm community radio JU</p>
-            <p id="credential-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur
-                deleniti quos incidunt reprehenderit laboriosam, eaque sint ex beatae consequatur optio nemo odio
-                dolorum fuga unde aliquid esse nisi ducimus? Ullam rerum impedit ut earum.</p>
+            <p id="experience-company-credentials">Community Radio JU 90.8 MHz</p>
+            <p id="credential-description"><li>Working at Community Radio JU 90.8 MHz, at Jadavpur University as a part-time Radio Jockey and voice-over artist.</li><li> Experienced host and participant in various Radio programmes, including Radio drama, interviews, cultural performance, and others.</li><li> Rewarded for contribution to the organisation.</li></p>
             <p id="experience-period-credentials">Jun 2023 - Jul 2023</p>
             <p id="experience-domain-credentials">Content Curator</p>
             <p id="experience-company-credentials">Team Everest NGO</p>
-            <p id="credential-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur
-                deleniti quos incidunt reprehenderit laboriosam, eaque sint ex beatae consequatur optio nemo odio
-                dolorum fuga unde aliquid esse nisi ducimus? Ullam rerum impedit ut earum.</p>
+            <p id="credential-description"><li>Composed impactful educational material for under-privileged students to foster literacy in a lucid and attractive way. Awarded a certificate for the same.</li></p>
             <p id="experience-period-credentials">Sep 2021 - Nov 2021</p>
             <p id="experience-domain-credentials">Published Author</p>
             <p id="experience-company-credentials">Spread Those Inks</p>
-            <p id="credential-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur
-                deleniti quos incidunt reprehenderit laboriosam, eaque sint ex beatae consequatur optio nemo odio
-                dolorum fuga unde aliquid esse nisi ducimus? Ullam rerum impedit ut earum.</p>
+            <p id="credential-description"><li>Published two short stories in two anthology collections under Inkzoid Publictions.</li> <li>The books are "Abridged Love' and 'Oblivious World'.</li> <li>The books are available on various e-commerce platforms like Amazon and Flipkart.</li></p>
             <p id="experience-period-credentials">Nov 2020 - Dec 2020</p>
             <p id="experience-domain-credentials">Digital Marketing Intern</p>
             <p id="experience-company-credentials">knowledge Plus</p>
-            <p id="credential-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur
-                deleniti quos incidunt reprehenderit laboriosam, eaque sint ex beatae consequatur optio nemo odio
-                dolorum fuga unde aliquid esse nisi ducimus? Ullam rerum impedit ut earum.</p>
+            <p id="credential-description"><li>30 Days of certified experience in digital marketing via various social media platforms.</li></p>
 
 
 
             <p id="education-credentials">EDUCATION</p>
             <p id="education-period-credentials">2022 - Present</p>
             <p id="education-company-credentials">St. Xavier's College (Autonomous), Kolkata</p>
-            <p id="education-domain-credentials">Bachelor of Science, Mass Communication and videoography</p>
-            <p id="credential-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur
-                deleniti quos incidunt reprehenderit laboriosam, eaque sint ex beatae consequatur optio nemo odio
-                dolorum fuga unde aliquid esse nisi ducimus? Ullam rerum impedit ut earum.</p>
+            <p id="education-domain-credentials">Bachelor of Science, Mass Communications and Videography</p>
+            <p id="credential-description">This course covers various disciplines of Film-making, including Scriptwriting, Video Editing, Sound Designing and Media Science. This 3 years degree course shall terminate around June, 2025.</p>
             <p id="education-period-credentials">2009 - 2022</p>
             <p id="education-company-credentials">St. Xavier's Institution</p>
             <p id="education-domain-credentials">High School Diploma, Humanities/Humanistic Studies</p>
-            <p id="credential-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur
-                deleniti quos incidunt reprehenderit laboriosam, eaque sint ex beatae consequatur optio nemo odio
-                dolorum fuga unde aliquid esse nisi ducimus? Ullam rerum impedit ut earum.</p>
+            <p id="credential-description"> ISC score → 95.25% <br>
+                ICSE score → 96.2%
+          </p>
 
 
             <p id="skill-credentials">SKILLS</p>
             <div class="skills">
-                <div class="skill">Content Writing<p id="skill-description">Lorem ipsum dolor sit amet.</p>
+                <div class="skill">Content Writing<p id="skill-description">Screenplay (Film, Short film, Ad Projects) Articles</p>
                 </div>
-                <div class="skill">Voice Artist<p id="skill-description">Lorem ipsum dolor sit amet.</p>
+                <div class="skill">Voice Artist<p id="skill-description">Dubbing, Voiceover, RJing, Radio Drama</p>
                 </div>
-                <div class="skill">Sketch Artist<p id="skill-description">Lorem ipsum dolor sit amet.</p>
+                <div class="skill">Sketch Artist<p id="skill-description">Storyboarding, Charecter Sketch & Set Design</p>
                 </div>
-                <div class="skill">Video Editing<p id="skill-description">Lorem ipsum dolor sit amet.</p>
+                <div class="skill">Video Editing<p id="skill-description">Film rush & Ad Projects</p>
                 </div>
-                <div class="skill">Sound Designing<p id="skill-description">Lorem ipsum dolor sit amet.</p>
+                <div class="skill">Sound Designing<p id="skill-description">Film Rush and Radio Progreammes</p>
                 </div>
-                <div class="skill">Photograpy<p id="skill-description">Lorem ipsum dolor sit amet.</p>
+                <div class="skill">German Proficiency<p id="skill-description">Diploma from Jadavpur University, Intermediate</p>
                 </div>
             </div>
 
