--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
                 </div>
                 <div class="right">
                     <span>LOCATION</span>
-                    <h4>Baranagar, West Bengal, India</h4>
+                    <h4>Dakhshineswar, West Bengal, India</h4>
                 </div>
             </div>
             <p id="social-info-title">SOCIAL INFO</p>
@@ -82,7 +82,7 @@
         <div class="contact-form">
             <img src="images/icon2.png"
             id="icon4-contact-page">
-            <p id="lets-work-contact">Let's work <b style="color: #5975F0;;">together.</b></p> </p>
+            <p id="lets-work-contact">Let's work <b style="color: #5B78f6;;">together.</b></p> </p>
             <input type="text" placeholder="Name" id="input-text">
             <input type="email" placeholder="Email" id="input-text">
             <input type="text" placeholder="Subject" id="input-text">
