--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-
+  
     <nav class="nav-bar">
         <img src="images/logo.png" alt="" srcset="" class="logo">
         <div class="links">
@@ -64,7 +64,17 @@
             <p id="title">Credentials</p>
             <a href="credentials.html"><img src="images/icon.svg" alt="" srcset="" id="detail-icon2"></a>
         </div>
+        <div class="blog">
+            <img src="images/blogs.png" id="blog-image">
+            <p id="details">EXPLORE</p>
+            <p id="title">Blogs</p>
+            <a href="blogs.html"><img src="images/icon.svg" alt="" srcset="" id="detail-icon2"></a>
+        </div>
 
+        
+    </div>
+
+    <div class="second-row">
         <div class="projects">
             <p id="myworks">MY WORKS</p>
             <img src="images/myworks.jpg" id="myworks-image">
@@ -72,15 +82,7 @@
             <p id="title">Projects</p>
             <a href="project.html"><img src="images/icon.svg" alt="" srcset="" id="detail-icon2"></a>
         </div>
-    </div>
-
-    <div class="second-row">
-        <div class="blog">
-            <img src="images/blogs.png" id="blog-image">
-            <p id="details">EXPLORE</p>
-            <p id="title">Blogs</p>
-            <a href="blogs.html"><img src="images/icon.svg" alt="" srcset="" id="detail-icon2"></a>
-        </div>
+      
         <div class="services">
             <div class="services-offered">
                 <img src="images/voice-artist.png" id="voice-artist">
@@ -125,7 +127,7 @@
         <div class="connect">
             <img src="images/icon2.png"
             id="icon2">
-            <p id="lets-work">Let's <p id="lets-work">work <b style=" color: #5975F0;;">together.</b></p> </p>
+            <p id="lets-work">Let's <p id="lets-work">work <b style=" color: #5B78f6;;">together.</b></p> </p>
             <a href="contact.html"><img src="images/icon.svg" alt="" srcset="" id="detail-icon3"></a>
         </div>
     </div>
