--- a/blogs.html
+++ b/blogs.html
@@ -40,16 +40,38 @@
         <a href="contact.html" style="text-decoration: none"><p  id="contact" onclick="closemenu()">Contact</p></a>
         <a href="contact.html"><button class="lets-talk">Let's talk</button></a>
       </div>
-    <div style="display: flex;">
+      <div class="nav-bar-blogs">
+        <p id="nav-blog" onclick="blogs()">Blogs</p>
+        <p id="nav-photograph" onclick="photographs()">Photography</p>
+        <p id="nav-thought" onclick="thoughts()">Thoughts</p>
+      </div>
+
+      <div id="blog-blogs-main">
+        <p class="blogs-headings">Blogs</p>
+
+
+      </div>
+      <div id="blog-photographs-main">
+        <p class="blogs-headings">Photography</p>
+
+
+      </div>
+      <div id="blog-thoughts-main">
+        <p class="blogs-headings">Thoughts</p>
+        
+
+
+      </div>
+    <!-- <div style="display: flex;">
         <p id="coming-soon">Coming&nbsp;Soon</p>
     <div class="container">
     <div class="dot"></div>
     <div class="dot"></div>
     <div class="dot"></div>
   </div>
-</div>
-<footer style="padding-bottom: 20px; margin-top:350px;">
-    <p id="footer">© All rights reserved by Adhiraj Chakrabarti</p>
+</div> -->
+<footer style="width: 1300px; ">
+    <p id="footer"></p>
 </footer>
 <script src="main.js"></script>
 
