--- a/blogs.html
+++ b/blogs.html
@@ -71,7 +71,7 @@
   </div>
 </div> -->
 <footer style="width: 1320px; ">
-    <p id="footer">.</p>
+   <p id="footer" style="color:#131313">.</p>
 </footer>
 <script src="main.js"></script>
 
