--- a/blogs.html
+++ b/blogs.html
@@ -12,7 +12,7 @@
 
     <nav class="nav-bar">
         <img src="images/logo.png" alt="" srcset="" class="logo">
-        <div class="links">
+        
             <a href="index.html" style="text-decoration: none">
                 <p class="home">Home</p>
             </a>
@@ -25,7 +25,7 @@
             <a href="contact.html" style="text-decoration: none;">
                 <p class="contact">Contact</p>
             </a>
-        </div>
+        
         <a href="contact.html"><button class="lets-talk">Let's talk</button></a>
     </nav>
     <img src="images/settings.png" alt="" srcset="" id="hambarger" onclick="menu()">
@@ -70,8 +70,8 @@
     <div class="dot"></div>
   </div>
 </div> -->
-<footer style="width: 1280px; ">
-   <p id="footer" style="color:#131313">.</p>
+<footer >
+  <p id="footer">© All rights reserved by Adhiraj Chakrabarti</p>
 </footer>
 <script src="main.js"></script>
 
