--- a/project.html
+++ b/project.html
@@ -12,7 +12,7 @@
 
     <nav class="nav-bar">
         <img src="images/logo.png" alt="" srcset="" class="logo">
-        <div class="links">
+        
             <a href="index.html" style="text-decoration: none">
                 <p class="home">Home</p>
             </a>
@@ -25,7 +25,7 @@
             <a href="contact.html" style="text-decoration: none;">
                 <p class="contact">Contact</p>
             </a>
-        </div>
+       
         <a href="contact.html"><button class="lets-talk">Let's talk</button></a>
     </nav>
     <img src="images/settings.png" alt="" srcset="" id="hambarger" onclick="menu()">
@@ -39,7 +39,7 @@
         <a href="contact.html" style="text-decoration: none"><p  id="contact" onclick="closemenu()">Contact</p></a>
         <a href="contact.html"><button class="lets-talk">Let's talk</button></a>
       </div>
-    <div style="display: flex;">
+    <div class="coming-soon-div" style="display: flex;">
         <p id="coming-soon">Coming&nbsp;Soon</p>
     <div class="container">
     <div class="dot"></div>
