--- a/blogs.html
+++ b/blogs.html
@@ -70,8 +70,8 @@
     <div class="dot"></div>
   </div>
 </div> -->
-<footer >
-  <p id="footer">© All rights reserved by Adhiraj Chakrabarti</p>
+<footer id="footer" >
+  <p >© All rights reserved by Adhiraj Chakrabarti</p>
 </footer>
 <script src="main.js"></script>
 
