--- a/project.html
+++ b/project.html
@@ -28,7 +28,7 @@
 
         <a href="contact.html"><button class="lets-talk">Let's talk</button></a>
     </nav>
-    <img src="images/settings.png" alt="" srcset="" id="hambarger" onclick="menu()">
+<!--     <img src="images/settings.png" alt="" srcset="" id="hambarger" onclick="menu()"> -->
 
     <div id="hambargarmenu">
         <img src="images/close.png" alt="" srcset="" id="close-menu" onclick="closemenu()">
